optimize cache logon